--- a/src/components/information/information.module.css
+++ b/src/components/information/information.module.css
@@ -9,8 +9,9 @@
 	width: 300px;
 	background-color: rgb(53, 53, 53);
 	color: orange;
+	border-radius: 8px;
 }
 
 .image {
-	width: 80px;
+	width: 100px;
 }
